policies/require-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  validationFailureAction: Enforce
  rules:
    - name: verify-signatures
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
                - StatefulSet
                - DaemonSet
                - Job
                - CronJob
      exclude:
        resources:
          namespaces:
            - kube-system
            - flux-system
            - kyverno
      verifyImages:
        - mutateDigest: true
          imageReferences:
            - "ghcr.io/rathsted/*"
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEVzrZFHwgfsJ8l10tBxHBl/tLcDcQ
[...]
                      -----END PUBLIC KEY-----
